2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.h:
	  Store operands of IFX and JUMPTAB the same way as operands of other iCodes.

2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCdflow.h,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c,
	  src/SDCCgenconstprop.cc:
	  A first proof-of-concept for generalized constant propagation analysis.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable tests that fail due to known -ms08 --stack-auto bugs.
	* doc/sdccman.lyx:
	  Document hc08/s08 struct/union parameter support.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  src/mos6502/gen.c,
	  src/z80/gen.c:
	  support/regression/MakeList:
	  Fix a right-shift codegen sign issue triggered by register packing.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  support/regression/MakeList:
	  Catch bug #3598 early.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c:
	  Fix stacked hx result in shifts.
	* support/regression/MakeList:
	  Exclude some tests that need features not yet supported by s08 from s08-stack-auto testing.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c:
	  hc08/s08 --stack-auto struct/union parameters.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  src/hc08/gen.c:
	  Caller-side support for hc08/s08 struct/union return.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve z80 rotation.
	* src/mcs51/ralloc.c:
	  Work around a mcs51 register saving issue (codegen cannot handle a return value in a bit if other bits are live at the call).
	* src/SDCCicode.c,
	  src/SDCCopt.c:
	  Fix bug #3595.

2023-06-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList: